# ms-ai-agent-open-hack

./: .env.template  .gitignore  README.md  pyproject.toml
prompts/: instructions.txt
src/: foundry_chat.py  pizza_agent.py  task1_foundry_chat.py  task2_create_agent.py  task3_configure_pizza_agent.py  task4_add_knowledge.py  task5_add_function_calling.py  task6_add_mcp_integration.py
src/utils/: agentic_ai_util.py
